[package]
name = "tokio-openssl"
version = "0.4.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/alexcrichton/tokio-openssl"
homepage = "https://github.com/alexcrichton/tokio-openssl"
documentation = "https://docs.rs/tokio-openssl"
description = """
An implementation of SSL streams for Tokio backed by OpenSSL
"""

[dependencies]
openssl = { git = "https://github.com/inikulin/rust-openssl", rev = "2eef8250c90c5d2f8e48cbac3197fd6c2ca97400", features = ["vendored"] }
openssl-sys = { git = "https://github.com/inikulin/rust-openssl", rev = "2eef8250c90c5d2f8e48cbac3197fd6c2ca97400", features = ["vendored"] }
tokio = "0.3"

[dev-dependencies]
futures = "0.3"
tokio = { version = "0.3", features = ["full"] }
