[package]
name = "tokio-openssl"
version = "0.4.0-cf"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/alexcrichton/tokio-openssl"
homepage = "https://github.com/alexcrichton/tokio-openssl"
documentation = "https://docs.rs/tokio-openssl"
description = """
An implementation of SSL streams for Tokio backed by OpenSSL
"""

[dependencies]
openssl = { git = "https://github.com/inikulin/rust-openssl", rev = "94d13219570e543a2947d3bb77c1c9cd98015675" }
tokio = "0.2"

[dev-dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
