[package]
name = "tokio-openssl"
version = "0.4.0-cf"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/alexcrichton/tokio-openssl"
homepage = "https://github.com/alexcrichton/tokio-openssl"
documentation = "https://docs.rs/tokio-openssl"
description = """
An implementation of SSL streams for Tokio backed by OpenSSL
"""

[dependencies]
openssl = { git = "https://github.com/inikulin/rust-openssl", rev = "7d551f51ef87f48f70aede3246ef06344ec44570" }
openssl-sys = { git = "https://github.com/inikulin/rust-openssl", rev = "7d551f51ef87f48f70aede3246ef06344ec44570" }
tokio = "0.2"

[dev-dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
